# envios-api

./: .gitignore  README.md  main.py  pyproject.toml
app/api/v1/: cliente_controller.py  cliente_router.py  envio_controller.py  seguimiento_controller.py  usuario_controller.py
app/db/: config.py
app/models/: cliente.py  envio.py  seguimiento.py  seguiminento.py  usuario.py
app/repositories/: cliente_repository.py  envio_repository.py  seguimiento_repository.py  usuario_repository.py
app/services/: cliente_service.py  envio_service.py  seguimiento_service.py  usuario_service.py
scripts/db/: V1__create_db.sql  V2__create_tables.sql  V3__create_codigo_envio_seq.sql
